# hpc-exercises

./: CMakeLists.txt  README.md  collect_data.sh  collect_mpi_data.sh  quicksort.c
Exercise1/: README.md  execute_benchmarks.sh
Exercise2/: CMakeLists.txt  README.md
